Fix line break in try box

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -86,6 +86,11 @@
     margin: 0;
 }
 
+.try-box-post-title {
+    margin-top: 0.2em;
+    line-height: 1.2em;
+}
+
 .try-box-image-wrapper {
     width: 50px;
     flex: 0 0 auto;
